--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ jobs:
   deploy-codigofacilito:
     runs-on: ubuntu-latest
     step:
-      uses: actions/checkout@v4
-      run: echo "Hacemos pull del codigo"
-      run: echo "Instalamos dependencias"
-      run: echo "Compilamos el codigo"
+      - uses: actions/checkout@v4
+      - run: echo "Hacemos pull del codigo"
+      - run: echo "Instalamos dependencias"
+      - run: echo "Compilamos el codigo"
